2014/04/03
The library is now extensible (in principle). A [custom] document constructor
allows the user to define her own documents, as long as they fit the manner
in which the current rendering engine works.

The [compact] rendering engine is now tail-recursive too.

2014/03/21
Minor optimisation in the smart constructor [group].

2014/03/13
New (simpler) pretty-printing engine. The representation of documents in
memory is slightly larger; document construction is perhaps slightly slower,
while rendering is significantly faster. (Construction dominates rendering.)
The rendering speed is now guaranteed to be independent of the width
parameter. The price to pay for this simplification is that the primitive
document constructors [column] and [nesting] are no longer supported. The
API is otherwise unchanged.

2013/01/31
First official release of PPrint.