@@ -98,8 +98,8 @@ val group: document -> document
 val ifflat: document -> document -> document
 
 (** [align doc] is the document [doc], in which the indentation level has been
-    increased so as to reach the current column. Thus, [doc] is rendered
-    within a box whose upper left corner is the current position. *)
+    set to the current column. Thus, [doc] is rendered within a box whose
+    upper left corner is the current position. *)
 val align: document -> document
 
 (** {1 Rendering documents} *)
