@@ -1,3 +1,9 @@
+2014/04/11
+Changed the behavior of [align], which was not consistent with its documentation.
+[align] now sets the indentation level to the current column. In particular, this
+means that [align (align d)] is equivalent to [align d], which was not the case
+previously. Thanks to Dmitry Grebeniuk for reporting this issue.
+
 2014/04/03
 The library is now extensible (in principle). A [custom] document constructor
 allows the user to define her own documents, as long as they fit the manner
